Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37859

PathView and Flickable incorrectly both react to same gesture

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.3.2
    • 5.1.0 , 5.2.0, 5.3.0 Beta1
    • None
    • c85bfba382ca1ddf0573c8f59e95b25f804b83ff

      With the right gesture (short and fast), the following example can be made to flick both the PathView and Flickable at the same time. I've found this easier to reproduce on a touchscreen (using tslib) than with a mouse, though it can be reproduced with a mouse as well. The expected behavior is that only the PathView handle the gesture.

      import QtQuick 2.0
      
      Flickable {
          objectName: "flickable"
          width: 400; height: 400
      
          contentHeight: height
          contentWidth: width * 3
          contentX: 400
      
          Row {
              Rectangle { width: 400; height: 400; color: "green" }
              Rectangle {
                  width: 400; height: 400; color: "blue"
                  clip: true
      
                  PathView {
                      id: pathView
                      objectName: "pathView"
                      width: parent.width
                      height: 200
                      anchors.verticalCenter: parent.verticalCenter
      
                      dragMargin: 400
                      pathItemCount: 6
      
                      model: 10
                      path: Path {
                          startX: -pathView.width / 2
                          startY: pathView.height / 2
                          PathLine { x: pathView.width + pathView.width / 2; y: pathView.height / 2 }
                      }
      
                      delegate: Rectangle {
                          width: 100; height: 200
                          color: "purple"
                          MouseArea {
                              anchors.fill: parent
                          }
                      }
                  }
              }
              Rectangle { width: 400; height: 400; color: "yellow" }
          }
      }
      

        For Gerrit Dashboard: QTBUG-37859
        # Subject Branch Project Status CR V

            martinj Martin Jones
            mbrasser Michael Brasser
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes